--- a/style/css/index.css
+++ b/style/css/index.css
@@ -3,3 +3,62 @@
     padding: 0;
     font-family:'Roboto', sans-serif;
 }
+
+body{
+    background-color: black;
+    color:white;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(24, 24, 24, 0.5); /* Make background semi-transparent */
+    backdrop-filter: blur(5px); /* Apply blur effect */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    top:0px;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    padding: 10px;
+    margin: 10px;
+}
+
+nav li {
+    margin: 0 10px;
+    
+}
+
+nav li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+
+}
+
+nav img {
+    width: 45px;
+    margin-left: 20px;
+}
+
+section {
+    background-color: black;
+    width:90%;
+    margin-right: auto;
+    margin-left: auto;
+    height: 100vh;
+}
+.first_section{
+    margin-top: 100px;
+}
+
+.bs {
+    width:300px;
+    background-color: red;
+}
