--- a/style/css/index.css
+++ b/style/css/index.css
@@ -5,60 +5,212 @@
 }
 
 body{
-    background-color: black;
+    background: linear-gradient(to right, rgb(153, 0, 255) ,rgb(65, 4, 162));
+    background-image: url(../../images/bg.jpg);
+    background-size: cover;
     color:white;
+    overflow-y: auto;
 }
 
 nav {
+    background-color: rgba(5, 4, 6, 0.5) !important;
+   
+    backdrop-filter: blur(10px);
+}
+
+.navcenter {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color: rgba(24, 24, 24, 0.5); /* Make background semi-transparent */
-    backdrop-filter: blur(5px); /* Apply blur effect */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    top:0px;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    padding: 10px;
-    margin: 10px;
-}
-
-nav li {
-    margin: 0 10px;
-    
-}
-
-nav li a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 500;
+    align-items: center;
+    padding: 1rem;
 
 }
 
-nav img {
-    width: 45px;
-    margin-left: 20px;
+.logo-text {
+   
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px !important;
 }
 
 section {
-    background-color: black;
-    width:90%;
+  
+   
     margin-right: auto;
     margin-left: auto;
     height: 100vh;
 }
-.first_section{
-    margin-top: 100px;
+
+.navbar {
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    border-bottom: 1px solid gray;
 }
+
+.navbar-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100%;
+    padding: 4px;
+    margin: auto;
+}
+
+.logo-link {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+.logo {
+    height: 32px;
+    object-fit: contain;
+}
+
+.logo-text {
+    font-size: 2em;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.start-button {
+    background-color: blue;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
+    padding: 2px 4px;
+    text-align: center;
+}
+
+.menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.menu-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.navbar-links {
+    display: none;
+}
+
+.link-list {
+    display: flex;
+    flex-direction: column;
+    padding: 4px;
+    border: 1px solid gray;
+    border-radius: 4px;
+    background-color: lightgray;
+}
+
+.link {
+    display: block;
+    padding: 2px 3px;
+    color: black;
+    text-decoration: none;
+}
+
+.link:hover {
+    background-color: gray;
+}
+
+.active {
+    background-color: blue;
+    color: white;
+}
+
+
+
+
+.first_section{
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(24, 133, 250,0.1  );
+    backdrop-filter: blur(10px);
+}
+
+
 
 .bs {
     width:300px;
     background-color: red;
+}
+
+.navitem {
+    font-family: 'Courier New', Courier, monospace;
+ 
+}
+
+/* nav item hover to change border color and add animation  */
+.navitem:hover {
+    font-weight: bold;
+    font-size: 23px;
+    color : rgb(1, 139, 245);
+    transition: all 0.3s ease-in-out;
+}
+
+.first-animate {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.first-animate {
+    animation: first 2s ease-in-out;
+}
+
+@media (max-width: 700px) {
+   .first-animate {
+       padding:30px;
+   }
+    
+}
+
+@keyframes first {
+    0% {
+        transform: translateX(-50%);
+        filter: blur(10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }   
+    
+}
+
+.getstartedbtn {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgb(29, 103, 243);
+    transition: all 0.3s ease-in;
+    align-items: center;
+    text-align: center;
+}
+
+.getstartedbtn:hover  {
+    background-color: rgb(1, 139, 245);
+    transition: all 0.3s ease-in;
+}
+
+.getstartedbtn i {
+    margin-left: 5px;
+    transition: all 0.3s ease-in;
+}
+
+.getstartedbtn:hover i {
+    margin-left: 30px;
 }
