--- a/style/css/index.css
+++ b/style/css/index.css
@@ -12,11 +12,28 @@ body{
     overflow-y: auto;
 }
 
+
+
 nav {
-    background-color: rgba(5, 4, 6, 0.5) !important;
+    background-color: rgba(21, 21, 21, 0.5) !important;
    
     backdrop-filter: blur(10px);
 }
+
+
+html::-webkit-scrollbar {
+    width: 5px;
+  }
+   
+  html::-webkit-scrollbar-track {
+    background: rgb(29, 29, 29);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  html::-webkit-scrollbar-thumb {
+    background: rgb(52, 52, 52);
+    border: 3px solid rgb(214, 197, 233);
+  }
 
 .navcenter {
     display: flex;
@@ -137,6 +154,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 100vh;
     background-color: rgb(24, 133, 250,0.1  );
     backdrop-filter: blur(10px);
