--- a/style/css/partical.css
+++ b/style/css/partical.css
@@ -43,6 +43,7 @@
     width: 100%;
     height: 100%;
     /* background-color: #b61924; */
+    z-index: -1;
     background-image: url('');
     background-size: cover;
     background-position: 50% 50%;
