--- a/style/css/index.css
+++ b/style/css/index.css
@@ -317,3 +317,115 @@ section {
 .panel {
   width: 100vw !important;
 }
+
+.development_section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ justify-content: center;
+}
+
+.develop-container {
+  flex:auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 50vh;
+  margin-top:  -120px;
+}
+
+.devglasscard {
+  flex:auto;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  padding: 15px;
+  margin: 5px;
+  transition:  all 0.3s ease;
+  cursor: pointer;
+
+}
+
+
+.devglasscard:hover{
+  scale: 1.1;
+}
+
+.uiuximg {
+  width: 100%;
+  height: auto;
+  
+  background-color: red;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+
+
+
+
+.ownlist {
+  position: absolute;
+ bottom:40px;
+  background: rgba(74, 68, 247, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  padding : 20px;
+  
+}
+
+.list-disc {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  transition: all 0.3s ease-in;
+
+}
+
+
+.list-disc li {
+  list-style: none;
+  padding: 0;
+  margin: 0px 10px;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+.list-disc li:hover {
+
+  font-weight: bold;
+  font-size: 20px;
+  color :rgb(243, 29, 29);
+}
+
+
+
+
+.team-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social ul {
+  
+  position: absolute;
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.footer-social li {
+   margin-right : 10px;
+   font-family: sans-serif;
+}
